# 02-mlops-observability-stack

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  security-scan.yml
app/anomaly_detection/: alerting.py  config.py  detector.py  elasticsearch_client.py  models.py  prometheus_client.py
app/anomaly_detection/detection/: ewma.py  isolation_forest.py  zscore.py
app/anomaly_detection/metrics/: exporter.py
app/anomaly_detection/services/: anomaly_service.py  metric_service.py
app/anomaly_detection/utils/: logger.py
app/exporter/: __init__.py  metrics_exporter.py
app/pipeline/: __init__.py  drift_detector.py  predict.py  train.py
app/serving/: Dockerfile  __init__.py  app.py  requirements.txt
docs/runbooks/: inference-server-down.md  model-drift-detected.md  model-retraining.md
infra/docker/base-images/: python-ml-base.Dockerfile
infra/docker/logstash/pipeline/: logstash.conf
infra/kubernetes/: namespace.yaml
infra/kubernetes/deployments/: exporter-deployment.yaml  inference-deployment.yaml  mlflow-deployment.yaml
infra/kubernetes/ingress/: ingress.yaml
infra/kubernetes/jobs/: training-job.yaml
infra/kubernetes/monitoring/: alertmanager-deployment.yaml  grafana-deployment.yaml  prometheus-deployment.yaml
infra/terraform/: main.tf
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: ml-pipeline.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
scripts/bootstrap/: init-env.sh  setup.sh
scripts/data/: generate_data.py
scripts/deployment/: deploy-k8s.sh  deploy-local.sh  destroy.sh
tests/chaos/: inject_drift.py
tests/integration/: test_pipeline.py
tests/unit/: test_drift_detector.py  test_predict.py  test_training.py
(+1 files in other folders)
